<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ListViewDynamicActivity!</string>
    <string name="app_name">Simple C25K</string>
    <string name="ok_icon">ok_icon</string>
    <string name="about">Credits:\n\nVoice-over: Cynthia Ross\nDeveloper: Roel Blaauwgeers</string>
    <!-- Exercise instructions -->
    <string name="w1">Brisk five-minute warmup walk. Then alternate 60 seconds of jogging and 90 seconds of walking for a total of 20 minutes.</string>
    <string name="w2">Brisk five-minute warmup walk. Then alternate 90 seconds of jogging and 2 minutes of walking for a total of 20 minutes.</string>
    <string name="w3">Brisk five-minute warmup walk. Then do two repetitions of the following:\n- Jog 90 seconds\n- Walk 90 seconds\n- Jog 3 minutes\n- Walk 3 minutes</string>
    <string name="w4">Brisk five-minute warmup walk. Then:\n- Jog 3 minutes\n- Walk 90 seconds\n- Jog 5 minutes\n- Walk 2½ minutes\n- Jog 3 minutes\n- Walk 90 seconds\n- Jog 5 minutes</string>
    <string name="w5d1">Brisk five-minute warmup walk, then:\n- Jog 5 minutes\n- Walk 3 minutes\n- Jog 5 minutes\n- Walk 3 minutes\n- Jog 5 minutes</string>
    <string name="w5d2">Brisk five-minute warmup walk, then:\n- Jog 8 minutes\n- Walk 5 minutes\n- Jog 8 minutes</string>
    <string name="w5d3">Brisk five-minute warmup walk, then jog 20 minutes with no walking.</string>
    <string name="w6d1">Brisk five-minute warmup walk, then:\n- Jog 5 minutes\n- Walk 3 minutes\n- Jog 8 minutes\n- Walk 3 minutes\n- Jog 5 minutes</string>
    <string name="w6d2">Brisk five-minute warmup walk, then:\n- Jog 10 minutes\n- Walk 3 minutes\n- Jog 10 minutes</string>
    <string name="w6d3">Brisk five-minute warmup walk, then jog 22 minutes with no walking.</string>
    <string name="w7">Brisk five-minute warmup walk, then jog 25 minutes.</string>
    <string name="w8">Brisk five-minute warmup walk, then jog 28 minutes.</string>
    <string name="w9">Brisk five-minute warmup walk, then jog 30 minutes.</string>

    <string name="loading">Loading. Please wait...</string>
    <string name="start_title">Press Start to begin.</string>
    <string name="start">Start</string>
    <string name="stop_title">Are you sure you want to exit?</string>
    <string name="stop">Stop</string>
    <string name="skip_title">Are you sure you want to skip?</string>
    <string name="skip">Skip</string>
    <string name="pause">Pause</string>
    <string name="paused">Paused</string>
    <string name="pausing">-Paused-</string>
    <string name="resume">Resume</string>
    <string name="done_title">Workout finished. Well done!</string>
    <string name="started_title">Workout started. Warmup for five minutes.\nGet started!</string>
    <string name="workout_completed">Workout completed</string>
    <string name="Ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="warmup">Warmup</string>
    <string name="warmupfor">Warmup: Brisk walk for </string>
    <string name="jogging">Jogging</string>
    <string name="jogfor">Jog for </string>
    <string name="walking">Walking</string>
    <string name="walkfor">Walk for </string>
    <string name="timeleft">Total time left:</string>
    <string name="settings">Settings</string>

    <string name="notifications_title">Notifications</string>
    <string name="enable_sound_title">Enable sound</string>
    <string name="enable_sound_summary">Enable or disable audio notifications</string>
    <string name="volume_title">Volume</string>
    <string name="volume_summary">Set volume percentage</string>
    <string name="test_volume_title">Test volume</string>
    <string name="test_volume_summary">Play beep to test the volume</string>
    <string name="vibrate_title">Vibrate</string>
    <string name="vibrate_summary">Enable or disable vibrations</string>
    <string name="show_alerts_title">Show Alert Dialogs</string>
    <string name="show_alerts_summary">Enable or disable confirmation alert dialogs</string>
    <string name="screen_title">Screen</string>
    <string name="wakelock_title">Wakelock</string>
    <string name="wakelock_summary">Choose the type of wakelock. Partial allows the screen to turn off with the timer still running, while dim dims the screen.</string>
    <string name="info_title">Info</string>
    <string name="homepage_title">Homepage</string>

    <string name="show_current_settings">Show current settings</string>
    <string name="settings_read_error">Settings not read</string>
    <string name="settings_write_error">Can\'t save changes. WTF?</string>

</resources>