<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory 
		android:title="@string/notifications_title"
		android:key="notifications">
		
		<CheckBoxPreference 
			android:key="enable_sound"
			android:summary="@string/enable_sound_summary"
			android:title="@string/enable_sound_title" 
			android:defaultValue="true"
		/>
		
		<ListPreference 
			android:key="volume_percentage"
			android:title="@string/volume_title"
			android:summary="@string/volume_summary"
			android:defaultValue="20" 
			android:entries="@array/updateInterval"
			android:entryValues="@array/updateIntervalValues"
			android:dependency="enable_sound"
			
		/>
		<Preference 
			android:key="test_volume"
			android:summary="@string/test_volume_summary"
			android:title="@string/test_volume_title"
			android:dependency="enable_sound"
		/>
		<CheckBoxPreference 
			android:key="enable_vibrations"
			android:summary="@string/vibrate_summary"
			android:title="@string/vibrate_title" 
			android:defaultValue="true"
		/>
		<CheckBoxPreference android:key="show_alerts"
			android:title="@string/show_alerts_title"
			android:defaultValue="true"
			android:summary="@string/show_alerts_summary"/>		
	</PreferenceCategory>

    <PreferenceCategory
        android:title="@string/screen_title"
        android:key="screen">
        <ListPreference
            android:key="wakelock"
            android:title="@string/wakelock_title"
            android:summary="@string/wakelock_summary"
            android:defaultValue="dim"
            android:entries="@array/wakelockType"
            android:entryValues="@array/wakelockTypeValues"/>
        </PreferenceCategory>

	<PreferenceCategory 
		android:title="@string/info_title"
		android:key="info">

<PreferenceScreen android:title="@string/homepage_title">
    <intent
        android:action="android.intent.action.VIEW"
        android:data="http://simplec25k.ttys0.nl"
        />
</PreferenceScreen>
		
	</PreferenceCategory>
	
	
</PreferenceScreen>
